[gd_scene load_steps=11 format=3 uid="uid://bcfbgsyc12klk"]

[ext_resource type="Script" path="res://script/result_screen_Controller.gd" id="1_1pusp"]
[ext_resource type="StyleBox" uid="uid://mo1fot3kdpgf" path="res://scene/StyleResultScreen.tres" id="1_ug0e8"]
[ext_resource type="Material" uid="uid://r1xncg4res7h" path="res://shader/Screen_VHS_Effect.tres" id="2_36etv"]
[ext_resource type="LabelSettings" uid="uid://bntk8oqxtovp7" path="res://scene/FontResultScreen.tres" id="2_jdcr0"]
[ext_resource type="Texture2D" uid="uid://bhj4cakxjt8qi" path="res://sprite/image.png" id="2_wx2gi"]
[ext_resource type="Texture2D" uid="uid://6mg8idktc57o" path="res://icon.svg" id="3_ysa4y"]
[ext_resource type="Texture2D" uid="uid://b4v05uvbvm8tm" path="res://MapDrawer/PointingLine.png" id="6_ijne6"]
[ext_resource type="AudioStream" uid="uid://cbt8kv134vkeo" path="res://Music/lofii.mp3" id="8_g2esy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6g3a"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 24
border_width_top = 8
border_width_right = 8
border_width_bottom = 24
border_color = Color(0.176471, 0.419608, 0.352941, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6djy0"]
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 1)
border_width_left = 24
border_width_top = 8
border_width_right = 8
border_width_bottom = 24
border_color = Color(0.176471, 0.419608, 0.352941, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1pusp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0475577, 0.0475576, 0.0475576, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.584
anchor_top = 0.554
anchor_right = 0.902
anchor_bottom = 0.854
offset_left = -0.280151
offset_top = -0.320007
offset_right = -0.840088
offset_bottom = -0.320007
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.435294, 0.368627, 1)

[node name="Image" type="TextureRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.084
anchor_right = 1.057
anchor_bottom = 1.0
offset_left = 0.240005
offset_top = 2.0
offset_right = 281.23
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.71239, 0.712389)
texture = ExtResource("2_wx2gi")
expand_mode = 1

[node name="MapPlayer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.049
anchor_top = 0.382
anchor_right = 0.458
anchor_bottom = 0.921
offset_left = -0.0800018
offset_top = 0.439972
offset_right = -0.360046
offset_bottom = 0.319946
metadata/_edit_group_ = true

[node name="background" type="Panel" parent="MapPlayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_ug0e8")

[node name="Label" type="Label" parent="MapPlayer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.028
anchor_right = 0.973
anchor_bottom = 0.271
offset_left = 0.0199986
offset_top = 44.0
offset_right = 0.194946
offset_bottom = 0.277985
grow_horizontal = 2
text = "TU MAPA"
label_settings = ExtResource("2_jdcr0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerMap" type="Panel" parent="MapPlayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.096
anchor_top = 0.289
anchor_right = 0.912
anchor_bottom = 0.879
offset_left = -0.424004
offset_top = -0.281998
offset_right = 0.471924
offset_bottom = 0.297974

[node name="ColorRect" type="ColorRect" parent="MapPlayer/PlayerMap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.435294, 0.368627, 1)

[node name="Control" type="Control" parent="MapPlayer/PlayerMap"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Line2D" type="Line2D" parent="MapPlayer/PlayerMap/Control"]
position = Vector2(-43.29, 37.865)
rotation = -1.55945
scale = Vector2(0.119437, 0.119437)
closed = true
width = 100.0
default_color = Color(0, 0.122034, 0.0998056, 1)
texture = ExtResource("6_ijne6")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 1

[node name="TextureRect" type="TextureRect" parent="MapPlayer/PlayerMap"]
material = ExtResource("2_36etv")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ysa4y")

[node name="MapGenerico" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.54
anchor_top = 0.385
anchor_right = 0.946
anchor_bottom = 0.93
offset_left = -0.800049
offset_top = 0.199982
offset_right = -0.320068
offset_bottom = -0.400085
metadata/_edit_group_ = true

[node name="background" type="Panel" parent="MapGenerico"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_ug0e8")

[node name="Label" type="Label" parent="MapGenerico/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_right = 0.976
anchor_bottom = 0.269
offset_top = 44.0
offset_right = 0.219971
offset_bottom = -0.172012
grow_horizontal = 2
text = "mapa correcto"
label_settings = ExtResource("2_jdcr0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerMap" type="Panel" parent="MapGenerico"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.096
anchor_top = 0.289
anchor_right = 0.912
anchor_bottom = 0.879
offset_left = -0.424004
offset_top = -0.281998
offset_right = 0.471924
offset_bottom = 0.297974

[node name="MapTextute" type="TextureRect" parent="MapGenerico/PlayerMap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MapGenerico/PlayerMap"]
material = ExtResource("2_36etv")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ysa4y")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.089
anchor_right = 0.709
anchor_bottom = 0.248
offset_left = 0.959991
offset_top = -0.120003
offset_right = 0.719849
offset_bottom = 0.159973
grow_horizontal = 2
theme_override_styles/panel = ExtResource("1_ug0e8")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.006
anchor_right = 0.802
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -0.0320001
offset_right = -0.176025
grow_vertical = 2
text = "Porcentaje de acierto:"
label_settings = ExtResource("2_jdcr0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Percent" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.779
anchor_top = 0.006
anchor_right = 0.984
anchor_bottom = 1.0
offset_left = -0.252075
offset_top = -0.0319924
offset_right = 0.208008
grow_horizontal = 0
grow_vertical = 2
text = "100%"
label_settings = ExtResource("2_jdcr0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.826
anchor_top = 0.074
anchor_right = 0.947
anchor_bottom = 0.265
offset_left = -0.920044
offset_top = 0.0800095
offset_right = 0.76001
offset_bottom = -0.200012
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_f6g3a")
theme_override_styles/hover = SubResource("StyleBoxFlat_6djy0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f6g3a")
theme_override_styles/normal = SubResource("StyleBoxFlat_f6g3a")

[node name="Polygon2D" type="Polygon2D" parent="Button"]
position = Vector2(7, 13)
color = Color(0.176471, 0.419608, 0.352941, 1)
polygon = PackedVector2Array(63, 73, 116, 74, 116, 38, 168, 86, 121, 128, 121, 101, 64, 101)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_g2esy")
autoplay = true

[connection signal="pressed" from="Button" to="." method="BackMenu"]
